HDDS-14443. Remove unused OZONE_GC_SETTINGS and OZONE_SECURE_IDENT_PRESERVE